_update some colors _add php support

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "new-ui-dark-theme",
   "displayName": "New UI Dark Theme",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "publisher": "butov-dev",
   "license": "MIT",
   "description": "The New UI Dark Theme for VS Code features a sleek dark mode with a modern, minimalistic design inspired by JetBrains New UI.",
@@ -17,17 +17,16 @@
   "engines": {
     "vscode": "^1.91.1"
   },
-  "categories": [
-    "Themes"
-  ],
+  "maintainers": ["Ruslan Butov"],
+  "categories": ["Themes", "Other"],
   "keywords": [
     "theme",
     "jetbrains",
-    "intellij",
-    "pycharm",
     "webstorm",
     "phpstorm",
-    "goland",
+    "javascript",
+    "typescript",
+    "php",
     "new dark",
     "the new ui",
     "jetbrains new ui",
