--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "new-ui-dark-theme",
   "displayName": "New UI Dark Theme",
-  "version": "1.1.2",
+  "version": "1.2.0",
   "publisher": "butov-dev",
   "license": "MIT",
   "description": "The New UI Dark Theme for VS Code features a sleek dark mode with a modern, minimalistic design inspired by JetBrains New UI.",
@@ -27,6 +27,7 @@
     "javascript",
     "typescript",
     "php",
+    "graphql",
     "new dark",
     "the new ui",
     "jetbrains new ui",
